--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "projeto-api",
+  "name": "men-stack-project-w-auth",
   "version": "1.0.0",
-  "description": "",
+  "description": "Para executar este projeto, você deverá ter instalado o Node.js e as dependências do npm. Será necessário ter instalado o banco de dados Mongodb e suas configurações. Além disso, iremos fazer requisições na API com a plataforma Postman.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/itsalle/MEN-stack-project-w-auth.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/itsalle/MEN-stack-project-w-auth/issues"
+  },
+  "homepage": "https://github.com/itsalle/MEN-stack-project-w-auth#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^6.0.12"
+    "express": "^4.18.1",
+    "mongoose": "^6.5.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.19"
   }
 }
